--- a/app/components/profile/profile.html
+++ b/app/components/profile/profile.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <div class="row" ng-show="vm.loggedIn">
         <div class="profile-header col-md-offset-1 col-md-10">
             <div class="row">
@@ -25,6 +25,150 @@
     <div class="row text-center" ng-show="!vm.loggedIn">
         <div class="access-restricted col-xs-12">
             <h2>You are not logged in. Please log in to view your profile.</h2>
+        </div>
+    </div>
+</div> -->
+<div class="container">
+    <div class="row text-center" ng-show="!vm.loggedIn">
+        <div class="access-restricted col-xs-12">
+            <h2>You are not logged in. Please log in to view your profile.</h2>
+        </div>
+    </div>
+    <div class="row mt-5" ng-hide="!vm.loggedIn">
+        <div class="col-lg-8 push-lg-4">
+            <ul class="nav nav-tabs nav-justified" role="tablist">
+                <li class="nav-item">
+                    <a href="" data-target="#profile" data-toggle="tab" class="nav-link active">Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" data-target="#favorites" data-toggle="tab" class="nav-link">Favorites</a>
+                </li>
+                <li class="nav-item">
+                    <a href="" data-target="#edit" data-toggle="tab" class="nav-link">Edit</a>
+                </li>
+            </ul>
+            <div class="tab-content pt-4 pb-5">
+                <div class="tab-pane active" id="profile">
+                    <h4 class="my-2 text-center">{{vm.user.firstName}} {{vm.user.lastName}}</h4>
+                    <div class="row my-2">
+                        <div class="col-sm-12 d-flex flex-column align-items-center">
+                            <h6 class="my-2"><em>{{vm.user.username}}</em></h6>
+                            <h6 class="mt-5">Areas of Interest</h6>
+                            <a href="" class="tag tag-default tag-pill">data management</a>
+                            <a href="" class="tag tag-default tag-pill">money</a>
+                            <div class="flex-row justify-content-center mt-5">
+                                <span class="badge badge-success text-center py-2 px-2"><i class="fa fa-heart fa-lg"></i> 5 Favorites</span>
+                                <span class="badge badge-info text-center py-2 px-2"><i class="fa fa-database fa-lg"></i> 0 Dapps</span>
+                                <span class="badge badge-primary text-center py-2 px-2"><i class="fa fa-comment fa-lg"></i> 0 Comments</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane" id="favorites">
+                    <h4 class="my-2 text-center">My Favorites</h4>
+                    <div class="row my-2">
+                        <div class="col-sm-12 d-flex flex-column align-items-center">
+                            <profile-favorites></profile-favorites>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane" id="edit">
+                    <h4 class="m-y-2">Edit Profile</h4>
+                    <form role="form">
+                        <div class="form-group row">
+                            <label class="col-lg-3 col-form-label form-control-label">First name</label>
+                            <div class="col-lg-9">
+                                <input class="form-control" type="text" value="Jane">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-lg-3 col-form-label form-control-label">Last name</label>
+                            <div class="col-lg-9">
+                                <input class="form-control" type="text" value="Bishop">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-lg-3 col-form-label form-control-label">Email</label>
+                            <div class="col-lg-9">
+                                <input class="form-control" type="email" value="email@gmail.com">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-lg-3 col-form-label form-control-label">Company</label>
+                            <div class="col-lg-9">
+                                <input class="form-control" type="text" value="">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-lg-3 col-form-label form-control-label">Website</label>
+                            <div class="col-lg-9">
+                                <input class="form-control" type="url" value="">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-lg-3 col-form-label form-control-label">Address</label>
+                            <div class="col-lg-9">
+                                <input class="form-control" type="text" value="" placeholder="Street">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-lg-3 col-form-label form-control-label"></label>
+                            <div class="col-lg-6">
+                                <input class="form-control" type="text" value="" placeholder="City">
+                            </div>
+                            <div class="col-lg-3">
+                                <input class="form-control" type="text" value="" placeholder="State">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-lg-3 col-form-label form-control-label">Time Zone</label>
+                            <div class="col-lg-9">
+                                <select id="user_time_zone" class="form-control" size="0">
+                                    <option value="Hawaii">(GMT-10:00) Hawaii</option>
+                                    <option value="Alaska">(GMT-09:00) Alaska</option>
+                                    <option value="Pacific Time (US &amp; Canada)">(GMT-08:00) Pacific Time (US &amp; Canada)</option>
+                                    <option value="Arizona">(GMT-07:00) Arizona</option>
+                                    <option value="Mountain Time (US &amp; Canada)">(GMT-07:00) Mountain Time (US &amp; Canada)</option>
+                                    <option value="Central Time (US &amp; Canada)" selected="selected">(GMT-06:00) Central Time (US &amp; Canada)</option>
+                                    <option value="Eastern Time (US &amp; Canada)">(GMT-05:00) Eastern Time (US &amp; Canada)</option>
+                                    <option value="Indiana (East)">(GMT-05:00) Indiana (East)</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-lg-3 col-form-label form-control-label">Username</label>
+                            <div class="col-lg-9">
+                                <input class="form-control" type="text" value="janeuser">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-lg-3 col-form-label form-control-label">Password</label>
+                            <div class="col-lg-9">
+                                <input class="form-control" type="password" value="11111122333">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-lg-3 col-form-label form-control-label">Confirm password</label>
+                            <div class="col-lg-9">
+                                <input class="form-control" type="password" value="11111122333">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-lg-3 col-form-label form-control-label"></label>
+                            <div class="col-lg-9">
+                                <input type="reset" class="btn btn-secondary" value="Cancel">
+                                <input type="button" class="btn btn-primary" value="Save Changes">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4 pull-lg-8 text-center mt-5">
+            <img id="profile-pic" ng-src="/images/profile_placeholder.png" class="m-x-auto img-fluid img-circle" width="60%" alt="avatar">
+            <div class="d-flex flex-row">
+                <input type="file" id="file" class="form-control-sm align-self-center">
+            </div>
         </div>
     </div>
 </div>
