authentication updates and app styling

--- a/app/components/profile/profile.html
+++ b/app/components/profile/profile.html
@@ -4,7 +4,7 @@
             <h2>You are not logged in. Please log in to view your profile.</h2>
         </div>
     </div>
-    <div class="row mt-5" ng-hide="!vm.loggedIn">
+    <div class="row mt-5" ng-show="vm.loggedIn">
         <div class="col-lg-8 push-lg-4">
             <ul class="nav nav-tabs nav-justified" role="tablist">
                 <li class="nav-item">
