--- a/app/components/dapps/dapp-dialog/dapp-dialog.html
+++ b/app/components/dapps/dapp-dialog/dapp-dialog.html
@@ -11,10 +11,19 @@
       <div class="col-12 col-sm-5">
         <h2 class="">{{vm.dapp.name}}</h2>
         <p>{{vm.dapp.thumbnailDescription}}</p>
+        <hr class="my-3">
+        <div class="flex-row justify-content-around">
+          <button ng-click="vm.addFavorite()" ng-show="vm.loggedIn" ng-disabled="vm.favorited" class="btn btn-secondary rounded-button" role="button">
+              <span class="fa fa-heart"></span>
+          </button>
+          <button ng-click="vm.addLike()" ng-show="vm.loggedIn" ng-disabled="vm.liked" class="btn btn-secondary rounded-button" role="button" >
+              <span class="fa fa-thumbs-up"></span>
+          </button>
+        </div>
       </div>
       <div class="col-12 col-sm-3 d-flex justify-content-center align-items-center">
         <ul class="list-unstyled d-flex">
-            <li class="pl-2" ng-show="vm.hasSocial('facebook')">
+          <li class="pl-2" ng-show="vm.hasSocial('facebook')">
             <a class="dapp-social-links" href="{{vm.dapp.socialLinks.facebook}}">
               <i class="fa fa-facebook-f fa-2x"></i>
             </a>
@@ -56,7 +65,7 @@
              <dapp-about-component about-content="vm.dapp.aboutContent" about-images="vm.dapp.aboutImages"></dapp-about-component> 
           </div>
           <div class="tab-pane fade" id="dapp-discussion" role="tabpanel">
-             <dapp-discussion-component dapp-id="vm.dapp.id"></dapp-discussion-component> 
+             <dapp-discussion-component app-id="vm.dapp.id"></dapp-discussion-component> 
           </div>
         </div>
       </div>
