--- a/app/components/dapps/dapp-dialog/dapp-discussion/comments/comments.html
+++ b/app/components/dapps/dapp-dialog/dapp-discussion/comments/comments.html
@@ -1,17 +1,16 @@
 
-<div class="row">
-  <div class="comments-container col-xs-8 col-xs-offset-2">
-    <div ng-hide="vm.loggedIn" class="col-xs-12 add-top-level-area text-center">
-      Please <a href="#">Login</a> or <a href="#">Sign Up</a> to comment on this Dapp
-    </div>
-    <div ng-show="vm.loggedIn" class="col-xs-12">
-      <div class="col-xs-9">
-        <textarea class="text-box-top" ng-model="vm.formComment.body" placeholder="Add Comment..." ></textarea>
+<div class="d-flex flex-row justify-content-center">
+  <div ng-hide="vm.loggedIn" class="">
+    Please <a href="#">Login</a> or <a href="#">Sign Up</a> to comment on this Dapp
+  </div>
+  <div ng-show="vm.loggedIn" class="col-8">
+      <div class="form-group w-100">
+        <label class="sr-only" for="comment-input" aria-label="Comment Input">Comment Input</label>
+        <textarea class="form-control" id="comment-input" rows="3" ng-model="vm.formComment.body"></textarea>
       </div>
-      <div class="col-xs-3 btn-container">
+      <div class="">
         <button class="top-btn btn btn-primary" ng-click="vm.createComment()">Save</button>
       </div>
-    </div>
   </div>
 </div>
 <ul>
