--- a/app/components/dapps/dapp-dialog/dapp-discussion/dapp-discussion.html
+++ b/app/components/dapps/dapp-dialog/dapp-discussion/dapp-discussion.html
@@ -1,6 +1,6 @@
-<div class="row discussion-content-row">
-    <div>
-
+<div class="container">
+    <div class="d-flex flex-row justify-content-center discussion-header-section py-5 px-2">
+        Feel free to join the discussion, ya filthy animal.
     </div>
     <comments-component></comments-component>
 </div> 
