--- a/app/index.ejs
+++ b/app/index.ejs
@@ -7,7 +7,7 @@
     <title>DappStack</title>
     <meta name="description" content="">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
   </head>
 
   <body>
