--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -6,6 +6,10 @@ body {
     background: rgba(225,225,225,.5);
 }
 
+.content-area {
+    min-height: 100vh;
+}
+
 /* REDIRECT PAGE STYLES */
 .access-restricted {
     height: 400px;
@@ -103,11 +107,9 @@ body {
 }
 
 /* DAPP DETAIL PAGE STYLES */
-.close-button {
-    border: 1px solid black;
+.rounded-button {
+    padding: .5rem .75rem;
     border-radius: 50%;
-    padding: 7px 14px 7px 14px;
-    margin: 0;
 }
 
 /* DAPP ABOUT PAGE STYLES */
@@ -121,33 +123,3 @@ body {
 
 
 /* COMMENTS STYLING */
-.comments-container {
-    margin: 10%;
-    border: 1px solid darkblue;
-    border-radius: 15px;
-}
-
-.text-box-top {
-    width:100%;
-    height: 100%;
-    margin: 10px 0 5px 0;
-    height: 100px;
-}
-
-.top-btn {
-    margin-top: 10px;
-}
-
-.comment-block {
-    border: 1px solid darkblue;
-    border-radius: 15px;
-    margin: 5px;
-}
-
-.children {
-    transform: translateX(-2%);
-}
-
-.button-list {
-    border: none;
-}
