--- a/app/components/dapps/dapp-list-item/dapp-list-item.html
+++ b/app/components/dapps/dapp-list-item/dapp-list-item.html
@@ -3,7 +3,7 @@
     <a ui-sref="app.dapps.dappdetails({dappId: vm.dappId, name: vm.name})">
         <img class="card-img-top img-fluid" ng-src="{{vm.logoImage}}" alt="Card image cap"> 
     </a>
-    <div class="card-block">
+    <div class="card-block dapp-card-body">
         <h4 class="card-title">{{vm.name}}</h4>
         <p class="card-text">{{vm.thumbnailDescription}}</p>
     </div>
