--- a/app/components/dapps/dapp-dialog/dapp-about/dapp-about.html
+++ b/app/components/dapps/dapp-dialog/dapp-about/dapp-about.html
@@ -4,7 +4,7 @@
     </div>
 </div>
 <div class="row pb-5">
-    <div id="carousel-container" class="carousel slide about-slides" data-ride="carousel">
+    <div id="carousel-container" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carousel-container" data-slide-to="0" class="active"></li>
             <li data-target="#carousel-container" data-slide-to="1"></li>
@@ -12,13 +12,13 @@
         </ol>
         <div class="carousel-inner" role="listbox">
             <div class="carousel-item justify-content-center active">
-                <img class="d-block img-fluid about-image" ng-src="{{vm.aboutImages[0].image}}" alt="slide 1 image">
+                <img class="img-fluid about-image" ng-src="{{vm.aboutImages[0].image}}" alt="slide 1 image">
             </div>
             <div class="carousel-item justify-content-center">
-                <img class="d-block img-fluid about-image" ng-src="{{vm.aboutImages[1].image}}" alt="slide 2 image">
+                <img class="img-fluid about-image" ng-src="{{vm.aboutImages[1].image}}" alt="slide 2 image">
             </div>
             <div class="carousel-item justify-content-center">
-                <img class="d-block img-fluid about-image" ng-src="{{vm.aboutImages[2].image}}" alt="slide 3 image">
+                <img class="img-fluid about-image" ng-src="{{vm.aboutImages[2].image}}" alt="slide 3 image">
             </div>
         </div>
         <a class="carousel-control-prev" data-target="#carousel-container" role="button" data-slide="prev">
