--- a/app/components/dapps/dapp-dialog/dapp-discussion/comments/comments.html
+++ b/app/components/dapps/dapp-dialog/dapp-discussion/comments/comments.html
@@ -3,7 +3,8 @@
   <div ng-hide="vm.loggedIn" class="">
     Please <a href="#">Login</a> or <a href="#">Sign Up</a> to comment on this Dapp
   </div>
-  <div ng-show="vm.loggedIn" class="col-8">
+  <div ng-show="vm.loggedIn" class="col-12 col-sm-8">
+      <h6 class="d-flex flex-row justify-content-center justify-content-sm-start">Your Comment</h6>
       <div class="form-group w-100">
         <label class="sr-only" for="comment-input" aria-label="Comment Input">Comment Input</label>
         <textarea class="form-control" id="comment-input" rows="3" ng-model="vm.formComment.body"></textarea>
@@ -13,7 +14,7 @@
       </div>
   </div>
 </div>
-<ul>
-  <comment-component class="comment-block" ng-repeat="comment in vm.comments" comment="comment" comments="vm.comments" logged-in="vm.loggedIn">
+<ul class="d-flex flex-column w-100">
+  <comment-component ng-repeat="comment in vm.comments" ng-init="commentIndex = $index" comment="comment" on-delete="vm.removeItem(commentIndex)" logged-in="vm.loggedIn">
   </comment-component>
 </ul>
