--- a/app/components/dapps/dapps.html
+++ b/app/components/dapps/dapps.html
@@ -1,9 +1,8 @@
 <div class="container-fluid">
-    <div>
+    <div class="d-flex justify-content-center justify-content-sm-start">
         <h3>{{vm.heading}}</h3>
     </div>
-
-    <div class="row flex-row flex-sm-nowrap justify-content-start dapps-row">
-        <dapp-list-item class="col-sm-4 col-lg-3 pt-3" ng-repeat="dapp in vm.dapps" dapp-id="dapp.id" name="dapp.name" thumbnail-description="dapp.thumbnailDescription" logo-image="dapp.logoImage" likes="dapp.likes"></dapp-list-item>
+    <div class="row flex-nowrap justify-content-start dapps-row">
+        <dapp-list-item class="pt-3 px-2" ng-repeat="dapp in vm.dapps" dapp-id="dapp.id" name="dapp.name" thumbnail-description="dapp.thumbnailDescription" logo-image="dapp.logoImage" likes="dapp.likes"></dapp-list-item>
     </div>
 </div>
