--- a/app/components/dapps/dapp-dialog/dapp-discussion/comments/comment/comment.html
+++ b/app/components/dapps/dapp-dialog/dapp-discussion/comments/comment/comment.html
@@ -1,33 +1,39 @@
 <!--TODO: add upvote/downvote buttons and score from object model to display/interact-->
 
-<div class="media">
-  <img class="d-flex mr-3" alt="placeholder image" src="/images/profile_placeholder.png" height="40" width="40">
+<div class="media comment pl-3 pt-2 mb-2">
+  <img class="d-flex mr-3" alt="placeholder image" src="/images/profile_placeholder.png" height="30" width="30">
   <div class="media-body">
     <div ng-show="vm.comment.editing">
-      <textarea ng-model="vm.comment.interact" placeholder="Reply..."></textarea>
-      <div class="buttons">
-        <button class="btn btn-primary" ng-click="vm.updateComment(vm.comment)">Update</button>
-        <button class="cancel btn" ng-click="vm.cancelComment(vm.comment)">Cancel</button>
+      <textarea class="col-10" ng-model="vm.comment.interact" placeholder="Reply..."></textarea>
+      <div class="buttons my-2">
+        <button class="btn btn-primary btn-sm" ng-click="vm.updateComment(vm.comment)">Update</button>
+        <button class="btn btn-secondary btn-sm" ng-click="vm.cancelComment(vm.comment)">Cancel</button>
       </div>
     </div>
 
     <div ng-hide="vm.comment.editing">
-      <h5>{{vm.comment.comment}}</h5>
-      <div class="" ng-hide="vm.comment.editing">
-        <span class="">- {{vm.username}}</span>
+      <div class="comment-head d-flex flex-row">
+        <span class="comment-username">{{vm.username}}</span>
+        <div class="d-flex align-self-center comment-meta mx-4">
+          <span>{{vm.comment.points}} <i class="fa fa-arrow-up"></i></span>
+          <span>{{vm.comment.modified}}</span>
+        </div>
       </div>
-      <div class="d-flex flex-row comment-actions">
-        <span><a ng-show="vm.loggedIn && !vm.comment.editing && !comment.replying" ng-click="vm.commentReply(vm.comment)">reply</a></span>
-        <span><a ng-show="vm.amOwner && !vm.comment.editing  && !vm.comment.replying" ng-click="vm.commentEdit(vm.comment)">edit</a></span>
-        <span><a ng-show="vm.amOwner && !vm.comment.editing  && !vm.comment.replying" ng-click="vm.deleteComment(vm.comment)">delete</a></span>
+      <div class="d-flex flex-row my-1">
+        <span class="comment-body">{{vm.comment.comment}}</span>
+      </div>
+      <div class="comment-actions d-flex flex-row">
+        <a ng-show="vm.loggedIn && !vm.comment.editing && !comment.replying" ng-click="vm.commentReply(vm.comment)">reply</a>
+        <a ng-show="vm.amOwner && !vm.comment.editing  && !vm.comment.replying" ng-click="vm.commentEdit(vm.comment)">edit</a>
+        <a ng-show="vm.amOwner && !vm.comment.editing  && !vm.comment.replying" ng-click="vm.deleteComment(vm.comment)">delete</a>
       </div>
     </div>
 
     <div ng-show="vm.comment.replying">
-      <textarea ng-model="vm.comment.interact" placeholder="Reply..." class=""></textarea>
-      <div class="">
-        <button class="save-comment-btn btn btn-primary" ng-click="vm.replyComment(vm.comment)">Save</button>
-        <button class="cancel btn" ng-click="vm.cancelComment(vm.comment)">Cancel</button>
+      <textarea class="col-10" ng-model="vm.comment.interact" placeholder="Reply..."></textarea>
+      <div class="my-2">
+        <button class="btn btn-primary btn-sm" ng-click="vm.replyComment(vm.comment)">Save</button>
+        <button class="btn btn-secondary btn-sm" ng-click="vm.cancelComment(vm.comment)">Cancel</button>
       </div>
     </div>
     <comment-component ng-repeat="comment in vm.replies" ng-init="commentIndex = $index" comment="comment" on-delete="vm.removeItem(commentIndex)" logged-in="vm.loggedIn">
