--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -130,13 +130,32 @@ body {
 
 
 /* COMMENTS STYLING */
+.comment {
+    border-left: 1px dotted black;
+    border-bottom: 1px dotted black;
+}
+
 .comment-actions {
     border-bottom: 1px solid #eee;
     margin-bottom: 5px;
 }
-.comment-actions a {
+.comment-actions > a {
     font-size: 12px;
-    color: grey;
+    color: blue !important;
     font-weight: bolder;
-    margin-right: 5px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.comment-username {
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.comment-body {
+    font-size: 13px;
+}
+
+.comment-meta {
+    font-size: 12px;
 }
