Admin pages added and bug fixes

--- a/app/components/dapp-catalog/dapp-catalog.html
+++ b/app/components/dapp-catalog/dapp-catalog.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="background: lightgrey; max-width: 1200px;">
+<div class="container-fluid dapp-catalog-container">
     <div class="row">
         <div class="col-12 col-md-3 mt-5">
             <dapp-search-panel category="vm.category" selected-tags="vm.selectedTags" statuses-selected="vm.statusesSelected"></dapp-search-panel>
