--- a/app/components/profile/profile.html
+++ b/app/components/profile/profile.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container profile-container">
     <div class="row text-center m-5" ng-show="!vm.loggedIn">
         <div class="alert alert-danger col-12 p-5">
             <h4>You are not logged in. Please log in to view your profile.</h4>
