--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -1,11 +1,11 @@
 <div class="jumbotron d-flex justify-content-center align-items-center home-splash">
-    <div class="text-center">
+    <div id="splash-message" class="text-center">
         <h2>We've Got DApps Covered, Top to Bottom</h2>
         <h4>Welcome to DappStack</h4>
         <p><a class="btn btn-primary btn-lg" ui-sref="app.search" role="button">Browse</a></p>
     </div>
 </div>
-<div class="container home-container justify-content-center">
+<div class="container home-body justify-content-center">
     <dapps class="container-fluid" heading="Latest" limit-to="10" order-by="created ASC"></dapps>
     <dapps class="container-fluid" heading="Popular" limit-to="10" order-by="likes ASC"></dapps>
 </div>
